<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="click">点击下</string>
    <string name="no">取消</string>
    <string name="title">仓库列表</string>
    <string name="reboot_title">reboot device</string>
    <string name="app_name">物资管理</string>
    <string name="hello_world">欢迎使用！</string>
    <string name="quit_title">exit app</string>
    <string name="dist_title">dist order</string>
    <string name="allot_title">allot order</string>
    <string name="count_title">cout order</string>
    <string name="action_settings">Settings</string>
    <string name="login_view_name">物资管理-用户登录</string>
    <string name="username_hint">账号名称</string>
    <string name="password_hint">密码</string>
    <string name="address_hint">服务地址</string>
    <string name="username_label">登录账号：</string>
    <string name="password_label">登录密码：</string>
    <string name="address_label">服务地址：</string>
    <string name="mate_title">refresh code</string>
    <string name="loginbutton_text">登  录</string>
    <string name="title_activity_main">物资管理-扫描出库</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_login">物资管理-用户登录</string>
    <string name="connect">connect MCU</string>
    <string name="id">ID</string>
    <string name="epc">EPC</string>
    <string name="count">count</string>
    <string name="inventory">Start Inventory</string>
    <string name="stop_inventory">Stop Inventory</string>
    <string name="clear">clear</string>
    <string name="membank">Membank</string>
    <string name="accesspassword">Access Password</string>
    <string name="addr">Address(word)</string>
    <string name="len">Length(word)</string>
    <string name="read">Read Tag</string>
    <string name="write">Write Tag</string>
    <string name="writedata">Write Data(HEX)</string>
    <string name="locktype">Lock Type</string>
    <string name="locktag">Lock Tag</string>
    <string name="kill">Kill Tag</string>
    <string name="killpassword">Kill Password</string>
    <string name="readdata">Read Data</string>
    <string name="back">Back</string>
    <string name="parameterSetting">Parameter Setting</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="set">set</string>
    <string name="confirm">confirm</string>
    <string name="rfPower">RF power</string>
    <string name="workArea">Work Area</string>
    <string name="freqSetting">Freq setting</string>
    <string name="china2Freq">China2：920125kHz~924875kHz</string>
    <string name="usaFreq">USA：902250kHz~927750kHz</string>
    <string name="euFreq">Europe：865100kHz~867900kHz</string>
    <string name="china1Freq">China1：840125kHz~844875kHz</string>
    <string name="koreaFreq">Korea：917700kHz~923300kHz</string>
    <string name="setSuccess">Set success</string>
    <string name="freqNotNull">Frequency not null</string>
    <string name="title_activity_dist">DistActivity</string>
    <string name="title_activity_set_nubmer">SetNubmerActivity</string>

</resources>