<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="xxtt.scan.LoginActivity" >

    <ProgressBar
        android:id="@+id/pbWidget"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" >
    </ProgressBar>

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:layout_toRightOf="@+id/labAddress"
        android:ems="10"
        android:hint="@string/address_hint"
        android:singleLine="true" >
    </EditText>

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etAddress"
        android:layout_marginTop="50dp"
        android:layout_toRightOf="@+id/labUserName"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textPostalAddress"
        android:singleLine="true" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUserName"
        android:layout_marginTop="50dp"
        android:layout_toRightOf="@+id/labPassword"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:singleLine="true" />

    <LinearLayout
        android:id="@+id/loginLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/labPassword"
        android:layout_below="@+id/etPassword"
        android:layout_marginTop="50dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/loginbutton_text" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="退  出" />
    </LinearLayout>

    <TextView
        android:id="@+id/labAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etAddress"
        android:layout_alignBottom="@+id/etAddress"
        android:text="@string/address_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/labUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etUserName"
        android:layout_alignBottom="@+id/etUserName"
        android:text="@string/username_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/labPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etPassword"
        android:layout_alignBottom="@+id/etPassword"
        android:text="@string/password_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>